--- a/products.html
+++ b/products.html
@@ -589,11 +589,11 @@
                     </div>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Unternehmen</h4>
+                    <h4 class="font-bold mb-4">Rechtliches</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-blue-400 transition">Über uns</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition">Referenzen</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition">Partner</a></li>
+                        <li><a href="impressum.html" class="hover:text-blue-400 transition">Impressum</a></li>
+                        <li><a href="datenschutz.html" class="hover:text-blue-400 transition">Datenschutz</a></li>
+                        <li><a href="agb.html" class="hover:text-blue-400 transition">AGB</a></li>
                     </ul>
                 </div>
                 <div>
@@ -601,24 +601,22 @@
                     <ul class="space-y-2 text-gray-400">
                         <li><a href="products.html" class="hover:text-blue-400 transition">Alle Produkte</a></li>
                         <li><a href="integration.html" class="hover:text-blue-400 transition">COPA Integration</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition">Preise</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="font-bold mb-4">Kontakt</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="contact.html" class="hover:text-blue-400 transition">Kontaktieren Sie uns</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition">Support</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition">Partnerschaften</a></li>
+                        <li><a href="contact.html" class="hover:text-blue-400 transition">Kontakt</a></li>
+                        <li><a href="mailto:info@liefermax.com" class="hover:text-blue-400 transition">info@liefermax.com</a></li>
+                        <li><a href="tel:+4983679139187" class="hover:text-blue-400 transition">08367 – 91 39 187</a></li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 mb-4 md:mb-0">© 2024 LieferMax GmbH. Alle Rechte vorbehalten.</p>
+                <p class="text-gray-400 mb-4 md:mb-0"> 2026 LieferMax GmbH. Alle Rechte vorbehalten.</p>
                 <div class="flex gap-6">
-                    <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-xing text-2xl"></i></a>
-                    <a href="mailto:info@liefermax.com" class="text-gray-400 hover:text-blue-400 transition"><i class="fas fa-envelope text-2xl"></i></a>
+                    <a href="mailto:info@liefermax.com" class="text-gray-400 hover:text-blue-400 transition" title="E-Mail an LieferMax"><i class="fas fa-envelope text-2xl"></i></a>
+                    <a href="tel:+4983679139187" class="text-gray-400 hover:text-blue-400 transition" title="Anrufen"><i class="fas fa-phone text-2xl"></i></a>
                 </div>
             </div>
         </div>
