fix: Replace remaining mockup data in contact.html with real info
- Fixed phone: 08367-91 39 187 (was fake +49 123 456 789)
- Fixed address: An der Leiten 4, 87672 Roßhaupten (was Musterstraße 123, Berlin)
- Removed fake 24/7 availability claim - now shows real office hours (Mo-Fr 9-17 Uhr)
- Removed fake social media section (Facebook, Twitter, Instagram, LinkedIn, YouTube)
- Fixed map zoom to street level (zoom 18) instead of far-out view
- All contact information now accurate and production-ready

--- a/contact.html
+++ b/contact.html
@@ -143,9 +143,9 @@
                             </div>
                             <div class="ml-6">
                                 <h3 class="text-xl font-bold text-gray-900 mb-2">Telefon</h3>
-                                <p class="text-gray-600 mb-2">Rufen Sie uns an – wir sind 24/7 für Sie da</p>
-                                <a href="tel:+4912345678" class="text-purple-600 font-semibold text-lg hover:text-purple-700">
-                                    +49 (0) 123 456 789
+                                <p class="text-gray-600 mb-2">Rufen Sie uns an</p>
+                                <a href="tel:+4983679139187" class="text-purple-600 font-semibold text-lg hover:text-purple-700">
+                                    08367 – 91 39 187
                                 </a>
                             </div>
                         </div>
@@ -173,10 +173,10 @@
                             </div>
                             <div class="ml-6">
                                 <h3 class="text-xl font-bold text-gray-900 mb-2">Adresse</h3>
-                                <p class="text-gray-600 mb-2">Besuchen Sie uns in unserem Hauptbüro</p>
+                                <p class="text-gray-600 mb-2">Unser Hauptsitz</p>
                                 <p class="text-gray-700 font-semibold">
-                                    Musterstraße 123<br>
-                                    12345 Berlin, Deutschland
+                                    An der Leiten 4<br>
+                                    87672 Roßhaupten, Deutschland
                                 </p>
                             </div>
                         </div>
@@ -188,46 +188,19 @@
                                 <i class="fas fa-clock text-white text-xl"></i>
                             </div>
                             <div class="ml-6">
-                                <h3 class="text-xl font-bold text-gray-900 mb-2">Öffnungszeiten</h3>
-                                <p class="text-gray-600 mb-3">Unser Service ist rund um die Uhr verfügbar</p>
+                                <h3 class="text-xl font-bold text-gray-900 mb-2">Geschäftszeiten</h3>
+                                <p class="text-gray-600 mb-3">Kontaktieren Sie uns während unserer Bürozeiten</p>
                                 <div class="space-y-1 text-gray-700">
                                     <div class="flex justify-between">
-                                        <span class="font-semibold">Lieferservice:</span>
-                                        <span>24/7</span>
-                                    </div>
-                                    <div class="flex justify-between">
-                                        <span class="font-semibold">Kundenservice:</span>
-                                        <span>24/7</span>
-                                    </div>
-                                    <div class="flex justify-between">
                                         <span class="font-semibold">Büro:</span>
-                                        <span>Mo-Fr 9-18 Uhr</span>
+                                        <span>Mo-Fr 9-17 Uhr</span>
+                                    </div>
+                                    <div class="flex justify-between">
+                                        <span class="font-semibold">E-Mail:</span>
+                                        <span>Jederzeit</span>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <!-- Social Media -->
-                    <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-2xl shadow-lg p-8 text-white">
-                        <h3 class="text-2xl font-bold mb-4">Folgen Sie uns</h3>
-                        <p class="mb-6">Bleiben Sie auf dem Laufenden mit unseren neuesten Updates</p>
-                        <div class="flex gap-4">
-                            <a href="#" class="w-12 h-12 bg-white bg-opacity-20 rounded-lg flex items-center justify-center hover:bg-opacity-30 transition">
-                                <i class="fab fa-facebook text-2xl"></i>
-                            </a>
-                            <a href="#" class="w-12 h-12 bg-white bg-opacity-20 rounded-lg flex items-center justify-center hover:bg-opacity-30 transition">
-                                <i class="fab fa-twitter text-2xl"></i>
-                            </a>
-                            <a href="#" class="w-12 h-12 bg-white bg-opacity-20 rounded-lg flex items-center justify-center hover:bg-opacity-30 transition">
-                                <i class="fab fa-instagram text-2xl"></i>
-                            </a>
-                            <a href="#" class="w-12 h-12 bg-white bg-opacity-20 rounded-lg flex items-center justify-center hover:bg-opacity-30 transition">
-                                <i class="fab fa-linkedin text-2xl"></i>
-                            </a>
-                            <a href="#" class="w-12 h-12 bg-white bg-opacity-20 rounded-lg flex items-center justify-center hover:bg-opacity-30 transition">
-                                <i class="fab fa-youtube text-2xl"></i>
-                            </a>
                         </div>
                     </div>
 
@@ -251,12 +224,12 @@
                     scrolling="no" 
                     marginheight="0" 
                     marginwidth="0" 
-                    src="https://www.openstreetmap.org/export/embed.html?bbox=10.6850%2C47.5580%2C10.6950%2C47.5630&layer=mapnik&marker=47.5605%2C10.6900" 
+                    src="https://www.openstreetmap.org/export/embed.html?bbox=10.6875%2C47.5595%2C10.6925%2C47.5615&layer=mapnik&marker=47.5605%2C10.6900" 
                     style="border: 0;"
                     title="LieferMax GmbH Standort">
                 </iframe>
                 <div class="text-xs text-gray-500 mt-2 text-center">
-                    <a href="https://www.openstreetmap.org/?mlat=47.5605&mlon=10.6900#map=15/47.5605/10.6900" target="_blank" rel="noopener" class="text-blue-600 hover:underline">
+                    <a href="https://www.openstreetmap.org/?mlat=47.5605&mlon=10.6900#map=18/47.5605/10.6900" target="_blank" rel="noopener" class="text-blue-600 hover:underline">
                         Größere Karte anzeigen
                     </a> | Karte: © <a href="https://www.openstreetmap.org/copyright" target="_blank" rel="noopener" class="text-blue-600 hover:underline">OpenStreetMap</a> Mitwirkende
                 </div>
