--- a/impressum.html
+++ b/impressum.html
@@ -32,6 +32,20 @@
                         <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition">Kontakt</a>
                     </div>
                 </div>
+                <div class="md:hidden">
+                    <button id="mobile-menu-button" class="text-gray-600 hover:text-blue-600">
+                        <i class="fas fa-bars text-2xl"></i>
+                    </button>
+                </div>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
+                <div class="flex flex-col space-y-4 px-4">
+                    <a href="index.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Home</a>
+                    <a href="products.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Produkte</a>
+                    <a href="integration.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">COPA Integration</a>
+                    <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Kontakt</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -181,5 +195,6 @@
         </div>
     </footer>
 
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
