--- a/index.html
+++ b/index.html
@@ -136,15 +136,25 @@
                         <a href="products.html" class="text-gray-600 hover:text-blue-600 font-medium transition">Produkte</a>
                         <a href="integration.html" class="text-gray-600 hover:text-blue-600 font-medium transition">COPA Integration</a>
                         <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition">Kontakt</a>
-                        <button class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
+                        <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
                             Demo anfragen
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="md:hidden">
-                    <button class="text-gray-600 hover:text-purple-600">
+                    <button id="mobile-menu-button" class="text-gray-600 hover:text-blue-600">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
+                </div>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
+                <div class="flex flex-col space-y-4 px-4">
+                    <a href="index.html" class="text-gray-900 hover:text-blue-600 font-medium transition py-2">Home</a>
+                    <a href="products.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Produkte</a>
+                    <a href="integration.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">COPA Integration</a>
+                    <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Kontakt</a>
+                    <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">Demo anfragen</a>
                 </div>
             </div>
         </div>
@@ -165,9 +175,9 @@
                         Digitalisieren Sie Ihren Lieferprozess mit LieferMax. Papierlose Lieferscheine, GPS-Tracking und nahtlose Integration mit COPA drink.3000 & drink.PRO.
                     </p>
                     <div class="flex flex-wrap gap-4 mb-12">
-                        <button class="bg-white text-blue-600 px-8 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105">
+                        <a href="contact.html" class="bg-white text-blue-600 px-8 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105 inline-block">
                             <i class="fas fa-calendar-check mr-2"></i>Demo vereinbaren
-                        </button>
+                        </a>
                         <button class="glass-effect text-white px-8 py-4 rounded-lg font-bold text-lg hover:bg-white hover:bg-opacity-20 transition border border-white border-opacity-30">
                             <i class="fas fa-play-circle mr-2"></i>Video ansehen
                         </button>
@@ -496,5 +506,6 @@
         </div>
     </footer>
 
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
