--- a/integration.html
+++ b/integration.html
@@ -46,6 +46,21 @@
                         <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">Demo anfragen</a>
                     </div>
                 </div>
+                <div class="md:hidden">
+                    <button id="mobile-menu-button" class="text-gray-600 hover:text-blue-600">
+                        <i class="fas fa-bars text-2xl"></i>
+                    </button>
+                </div>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
+                <div class="flex flex-col space-y-4 px-4">
+                    <a href="index.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Home</a>
+                    <a href="products.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Produkte</a>
+                    <a href="integration.html" class="text-gray-900 hover:text-blue-600 font-medium transition py-2">COPA Integration</a>
+                    <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Kontakt</a>
+                    <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">Demo anfragen</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -363,5 +378,6 @@
         </div>
     </footer>
 
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
