--- a/products.html
+++ b/products.html
@@ -52,15 +52,25 @@
                         <a href="products.html" class="text-gray-900 hover:text-blue-600 font-medium transition">Produkte</a>
                         <a href="integration.html" class="text-gray-600 hover:text-blue-600 font-medium transition">COPA Integration</a>
                         <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition">Kontakt</a>
-                        <button class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
+                        <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
                             Demo anfragen
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="md:hidden">
-                    <button class="text-gray-600 hover:text-blue-600">
+                    <button id="mobile-menu-button" class="text-gray-600 hover:text-blue-600">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
+                </div>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
+                <div class="flex flex-col space-y-4 px-4">
+                    <a href="index.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Home</a>
+                    <a href="products.html" class="text-gray-900 hover:text-blue-600 font-medium transition py-2">Produkte</a>
+                    <a href="integration.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">COPA Integration</a>
+                    <a href="contact.html" class="text-gray-600 hover:text-blue-600 font-medium transition py-2">Kontakt</a>
+                    <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">Demo anfragen</a>
                 </div>
             </div>
         </div>
@@ -553,6 +563,68 @@
         </div>
     </section>
 
+    <!-- Kassen-Konverter -->
+    <section id="kasse" class="py-24 px-4 bg-gray-50">
+        <div class="max-w-7xl mx-auto">
+            <div class="grid lg:grid-cols-2 gap-16 items-center">
+                <div>
+                    <div class="inline-block bg-cyan-100 text-cyan-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
+                        KASSENANBINDUNG
+                    </div>
+                    <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
+                        Kassen-<span class="text-cyan-600">Konverter</span>
+                    </h2>
+                    <p class="text-xl text-gray-600 mb-8 leading-relaxed">
+                        Sie wollen Ihre Getränke-Markt-Kasse günstig mit COPA SYSTEME verbinden? Artikel und Umsätze synchron halten? Hier ist Ihre Lösung!
+                    </p>
+                    
+                    <div class="space-y-4 mb-8">
+                        <div class="flex items-start gap-4">
+                            <div class="w-12 h-12 bg-cyan-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-sync text-cyan-600 text-xl"></i>
+                            </div>
+                            <div>
+                                <div class="font-bold text-gray-900 mb-1">Automatische Synchronisation</div>
+                                <div class="text-gray-600">Artikel und Umsätze werden automatisch zwischen Kasse und COPA abgeglichen</div>
+                            </div>
+                        </div>
+                        <div class="flex items-start gap-4">
+                            <div class="w-12 h-12 bg-cyan-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-euro-sign text-cyan-600 text-xl"></i>
+                            </div>
+                            <div>
+                                <div class="font-bold text-gray-900 mb-1">Kostengünstige Lösung</div>
+                                <div class="text-gray-600">Günstige Anbindung Ihrer bestehenden Kassensysteme</div>
+                            </div>
+                        </div>
+                        <div class="flex items-start gap-4">
+                            <div class="w-12 h-12 bg-cyan-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-database text-cyan-600 text-xl"></i>
+                            </div>
+                            <div>
+                                <div class="font-bold text-gray-900 mb-1">COPA Integration</div>
+                                <div class="text-gray-600">Nahtlose Verbindung mit drink.3000 und drink.PRO</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="contact.html" class="inline-flex items-center gap-2 bg-cyan-600 text-white px-8 py-4 rounded-lg font-bold hover:bg-cyan-700 transition">
+                        Mehr erfahren <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+                <div>
+                    <div class="bg-gradient-to-br from-cyan-500 to-teal-500 rounded-3xl p-8 text-white aspect-square flex items-center justify-center">
+                        <div class="text-center">
+                            <i class="fas fa-cash-register text-8xl mb-6 opacity-90"></i>
+                            <h3 class="text-3xl font-bold mb-4">Kasse & COPA</h3>
+                            <p class="text-lg opacity-90">Perfekt synchronisiert</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="py-24 px-4 gradient-bg">
         <div class="max-w-4xl mx-auto text-center text-white">
@@ -563,9 +635,9 @@
                 Vereinbaren Sie jetzt eine kostenlose Demo und erleben Sie LieferMax in Aktion.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
-                <button class="bg-white text-blue-600 px-10 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105">
+                <a href="contact.html" class="bg-white text-blue-600 px-10 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105 inline-block">
                     <i class="fas fa-calendar-check mr-2"></i>Demo vereinbaren
-                </button>
+                </a>
                 <a href="contact.html" class="bg-blue-700 bg-opacity-50 backdrop-blur-sm text-white px-10 py-4 rounded-lg font-bold text-lg hover:bg-opacity-70 transition border-2 border-white border-opacity-30">
                     <i class="fas fa-phone mr-2"></i>Jetzt anrufen
                 </a>
@@ -622,5 +694,6 @@
         </div>
     </footer>
 
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
