feat: complete content migration from WordPress XML
Phase 2 Content Completion:
- Add complete LieferMax App feature lists (37 points total)
  * Leistungsverzeichnis: 17 detailed features
  * Weitere Funktionen: 20 additional features
- Add LM-CHECK screenshot gallery (6 product screenshots)
- Add LM-MAP dashboard screenshots (3 dashboard views)
- Add Shop-Konverter integration logos (ShopWare, WooCommerce, COPA)
- All content now matches original WordPress site

Customer feedback addressed:
- Complete feature lists visible (no more missing content)
- Real product screenshots instead of placeholders
- Professional presentation with organized sections

Files updated: products.html, TASK.md, CHANGES-SUMMARY.md

--- a/products.html
+++ b/products.html
@@ -217,7 +217,112 @@
                                 </li>
                                 <li class="flex items-start gap-2">
                                     <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
-                                    <span>W-LAN Datenübertragung an COPA</span>
+                                    <span>Lieferschein drucken/per E-Mail versenden</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Aufträge löschen mit Begründung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Endkilometerstand eingeben</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Tagesabschluss erstellen</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Leergutkennzeichnung drucken</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>W-LAN Übertragung an IIS WEB-Server</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="bg-white bg-opacity-20 backdrop-blur-sm rounded-2xl p-6 mb-6">
+                            <h3 class="text-2xl font-bold mb-4">Weitere Funktionen</h3>
+                            <ul class="space-y-3 text-sm">
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Seriennummernverwaltung via Scanner (Kohlensäure)</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Leer & Vollgut-Scan Funktion</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Verrechnung von Zu- und Abschlägen</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Kumuliertes Leergut je Kunde</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Listung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Zug um Zug</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Heimdienstabwicklung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Bargeldberechnung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Offene Postenverwaltung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Rechnung, Lieferschein & Quittung per E-Mail</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>DMS Archivierung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Bruch: Fotozwang & Archivierung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Kundennotizen für das Büro</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Bewertete Lieferscheine</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Neuer Auftrag über Bestandskundenliste</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Storno mit Grundangabe</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Zeiterfassung (Tourbeginn & Ende)</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Barkunden Leergutverrechnung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Digitale Belegerstellung</span>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <i class="fas fa-chevron-right mt-1 flex-shrink-0"></i>
+                                    <span>Lieferschein & Rechnungsnachdruck</span>
                                 </li>
                             </ul>
                         </div>
@@ -311,6 +416,19 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <!-- Screenshot Gallery -->
+                    <div class="mt-8">
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">Screenshots</h3>
+                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+                            <img src="assets/images/lm-check_IMG_6060.png" alt="LM-CHECK Screenshot 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-check_IMG_6061.png" alt="LM-CHECK Screenshot 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-check_IMG_6062.png" alt="LM-CHECK Screenshot 3" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-check_IMG_6063.png" alt="LM-CHECK Screenshot 4" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-check_IMG_6064.png" alt="LM-CHECK Screenshot 5" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-check_IMG_6065.png" alt="LM-CHECK Screenshot 6" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -363,11 +481,12 @@
                     </div>
                 </div>
                 <div>
-                    <div class="bg-gradient-to-br from-purple-500 to-pink-500 rounded-3xl p-8 text-white aspect-square flex items-center justify-center">
-                        <div class="text-center">
-                            <i class="fas fa-map-marked-alt text-8xl mb-6 opacity-90"></i>
-                            <h3 class="text-3xl font-bold mb-4">Echtzeit-Übersicht</h3>
-                            <p class="text-lg opacity-90">Alle Fahrzeuge auf einen Blick</p>
+                    <!-- Dashboard Screenshots -->
+                    <div class="space-y-4">
+                        <img src="assets/images/lm-map_LieferMax-Map-Dashboard-1024x487.png" alt="LM-MAP Dashboard" class="rounded-xl shadow-2xl hover:scale-105 transition">
+                        <div class="grid grid-cols-2 gap-4">
+                            <img src="assets/images/lm-map_LieferMax-Map-1-1024x541.png" alt="LM-MAP Ansicht 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <img src="assets/images/lm-map_LieferMax-Map-2-1024x731.png" alt="LM-MAP Ansicht 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
                         </div>
                     </div>
                 </div>
@@ -385,9 +504,20 @@
                 <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
                     Shop-<span class="text-orange-600">Konverter</span>
                 </h2>
-                <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+                <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                     Moderne View-basierte Schnittstellen zwischen Ihrem Webshop und COPA Systeme drink.3000 & drink.PRO
                 </p>
+                <div class="flex justify-center items-center gap-8 flex-wrap">
+                    <div class="bg-white rounded-xl p-6 shadow-md">
+                        <img src="assets/images/shop-konverter_shopware.png" alt="ShopWare" class="h-12">
+                    </div>
+                    <div class="bg-white rounded-xl p-6 shadow-md">
+                        <img src="assets/images/shop-konverter_WordPress-1.png" alt="WooCommerce" class="h-12">
+                    </div>
+                    <div class="bg-white rounded-xl p-6 shadow-md flex items-center">
+                        <img src="assets/images/copa_systeme_logo.png" alt="COPA Systeme" class="h-12">
+                    </div>
+                </div>
             </div>
 
             <div class="grid lg:grid-cols-2 gap-12 mb-12">
