--- a/products.html
+++ b/products.html
@@ -166,9 +166,6 @@
                         </div>
                     </div>
 
-                    <button class="bg-red-600 text-white px-8 py-4 rounded-lg font-bold hover:bg-red-700 transition">
-                        <i class="fas fa-info-circle mr-2"></i>Detaillierte Funktionsliste
-                    </button>
                 </div>
                 <div>
                     <div class="bg-gradient-to-br from-red-500 to-red-400 rounded-3xl p-8 text-white">
@@ -377,11 +374,11 @@
                     </div>
                 </div>
                 <div class="order-1 lg:order-2">
-                    <div class="inline-block bg-green-100 text-green-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
+                    <div class="inline-block bg-red-100 text-red-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
                         LEERGUTKONTROLLE
                     </div>
                     <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
-                        LieferMax-<span class="text-green-600">CHECK</span>
+                        LieferMax-<span class="text-red-600">CHECK</span>
                     </h2>
                     <p class="text-xl text-gray-600 mb-6 leading-relaxed">
                         Mit LieferMax-CHECK wird die Leergutkontrolle zum Kinderspiel! Laden Sie Touren per Scan oder händischer Eingabe und kontrollieren Sie den Leergutbestand sekundenschnell.
@@ -389,8 +386,8 @@
                     
                     <div class="space-y-4 mb-8">
                         <div class="flex items-start gap-4">
-                            <div class="w-12 h-12 bg-green-100 rounded-xl flex items-center justify-center flex-shrink-0">
-                                <i class="fas fa-qrcode text-green-600 text-xl"></i>
+                            <div class="w-12 h-12 bg-red-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-qrcode text-red-600 text-xl"></i>
                             </div>
                             <div>
                                 <div class="font-bold text-gray-900 mb-1">Scannen oder Eingabe</div>
@@ -398,8 +395,8 @@
                             </div>
                         </div>
                         <div class="flex items-start gap-4">
-                            <div class="w-12 h-12 bg-green-100 rounded-xl flex items-center justify-center flex-shrink-0">
-                                <i class="fas fa-list-check text-green-600 text-xl"></i>
+                            <div class="w-12 h-12 bg-red-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-list-check text-red-600 text-xl"></i>
                             </div>
                             <div>
                                 <div class="font-bold text-gray-900 mb-1">Intelligente Artikelliste</div>
@@ -407,8 +404,8 @@
                             </div>
                         </div>
                         <div class="flex items-start gap-4">
-                            <div class="w-12 h-12 bg-green-100 rounded-xl flex items-center justify-center flex-shrink-0">
-                                <i class="fas fa-chart-line text-green-600 text-xl"></i>
+                            <div class="w-12 h-12 bg-red-100 rounded-xl flex items-center justify-center flex-shrink-0">
+                                <i class="fas fa-chart-line text-red-600 text-xl"></i>
                             </div>
                             <div>
                                 <div class="font-bold text-gray-900 mb-1">Sofortiger Abgleich</div>
@@ -421,12 +418,24 @@
                     <div class="mt-8">
                         <h3 class="text-2xl font-bold text-gray-900 mb-4">Screenshots</h3>
                         <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-                            <img src="assets/images/lm-check_IMG_6060.png" alt="LM-CHECK Screenshot 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-check_IMG_6061.png" alt="LM-CHECK Screenshot 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-check_IMG_6062.png" alt="LM-CHECK Screenshot 3" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-check_IMG_6063.png" alt="LM-CHECK Screenshot 4" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-check_IMG_6064.png" alt="LM-CHECK Screenshot 5" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-check_IMG_6065.png" alt="LM-CHECK Screenshot 6" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <a href="assets/images/lm-check_IMG_6060.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6060.png" alt="LM-CHECK Screenshot 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
+                            <a href="assets/images/lm-check_IMG_6061.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6061.png" alt="LM-CHECK Screenshot 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
+                            <a href="assets/images/lm-check_IMG_6062.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6062.png" alt="LM-CHECK Screenshot 3" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
+                            <a href="assets/images/lm-check_IMG_6063.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6063.png" alt="LM-CHECK Screenshot 4" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
+                            <a href="assets/images/lm-check_IMG_6064.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6064.png" alt="LM-CHECK Screenshot 5" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
+                            <a href="assets/images/lm-check_IMG_6065.png" target="_blank" class="block">
+                                <img src="assets/images/lm-check_IMG_6065.png" alt="LM-CHECK Screenshot 6" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-48 object-cover">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -439,40 +448,40 @@
         <div class="max-w-7xl mx-auto">
             <div class="grid lg:grid-cols-2 gap-16 items-center">
                 <div>
-                    <div class="inline-block bg-purple-100 text-purple-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
+                    <div class="inline-block bg-red-100 text-red-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
                         GPS-TRACKING
                     </div>
                     <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
-                        LieferMax-<span class="text-purple-600">MAP</span>
+                        LieferMax-<span class="text-red-600">MAP</span>
                     </h2>
                     <p class="text-xl text-gray-600 mb-8 leading-relaxed">
                         LieferMax-MAP ist Ihr Routing-Tool, um alle Fahrzeuge über GPS-Ortung live zu verfolgen und den Lieferzustand in Echtzeit auszuwerten.
                     </p>
                     
                     <div class="grid md:grid-cols-2 gap-6 mb-8">
-                        <div class="bg-purple-50 rounded-xl p-6">
-                            <div class="w-12 h-12 bg-purple-600 rounded-lg flex items-center justify-center mb-4">
+                        <div class="bg-red-50 rounded-xl p-6">
+                            <div class="w-12 h-12 bg-red-600 rounded-lg flex items-center justify-center mb-4">
                                 <i class="fas fa-map-marker-alt text-white text-xl"></i>
                             </div>
                             <h3 class="font-bold text-gray-900 mb-2">Live GPS-Ortung</h3>
                             <p class="text-gray-600 text-sm">Verfolgen Sie alle Fahrzeuge in Echtzeit auf einer Karte</p>
                         </div>
-                        <div class="bg-purple-50 rounded-xl p-6">
-                            <div class="w-12 h-12 bg-purple-600 rounded-lg flex items-center justify-center mb-4">
+                        <div class="bg-gray-50 rounded-xl p-6">
+                            <div class="w-12 h-12 bg-gray-600 rounded-lg flex items-center justify-center mb-4">
                                 <i class="fas fa-route text-white text-xl"></i>
                             </div>
                             <h3 class="font-bold text-gray-900 mb-2">Tourenoptimierung</h3>
                             <p class="text-gray-600 text-sm">Optimale Routenplanung für maximale Effizienz</p>
                         </div>
-                        <div class="bg-purple-50 rounded-xl p-6">
-                            <div class="w-12 h-12 bg-purple-600 rounded-lg flex items-center justify-center mb-4">
+                        <div class="bg-red-50 rounded-xl p-6">
+                            <div class="w-12 h-12 bg-red-600 rounded-lg flex items-center justify-center mb-4">
                                 <i class="fas fa-chart-pie text-white text-xl"></i>
                             </div>
                             <h3 class="font-bold text-gray-900 mb-2">Lieferstatus</h3>
                             <p class="text-gray-600 text-sm">Auswertung des aktuellen Lieferzustands</p>
                         </div>
-                        <div class="bg-purple-50 rounded-xl p-6">
-                            <div class="w-12 h-12 bg-purple-600 rounded-lg flex items-center justify-center mb-4">
+                        <div class="bg-gray-50 rounded-xl p-6">
+                            <div class="w-12 h-12 bg-gray-600 rounded-lg flex items-center justify-center mb-4">
                                 <i class="fas fa-history text-white text-xl"></i>
                             </div>
                             <h3 class="font-bold text-gray-900 mb-2">Historische Daten</h3>
@@ -483,10 +492,16 @@
                 <div>
                     <!-- Dashboard Screenshots -->
                     <div class="space-y-4">
-                        <img src="assets/images/lm-map_LieferMax-Map-Dashboard-1024x487.png" alt="LM-MAP Dashboard" class="rounded-xl shadow-2xl hover:scale-105 transition">
+                        <a href="assets/images/lm-map_LieferMax-Map-Dashboard-1024x487.png" target="_blank" class="block">
+                            <img src="assets/images/lm-map_LieferMax-Map-Dashboard-1024x487.png" alt="LM-MAP Dashboard" class="rounded-xl shadow-2xl hover:scale-105 transition cursor-pointer w-full">
+                        </a>
                         <div class="grid grid-cols-2 gap-4">
-                            <img src="assets/images/lm-map_LieferMax-Map-1-1024x541.png" alt="LM-MAP Ansicht 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
-                            <img src="assets/images/lm-map_LieferMax-Map-2-1024x731.png" alt="LM-MAP Ansicht 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer">
+                            <a href="assets/images/lm-map_LieferMax-Map-1-1024x541.png" target="_blank" class="block">
+                                <img src="assets/images/lm-map_LieferMax-Map-1-1024x541.png" alt="LM-MAP Ansicht 1" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-64 object-cover">
+                            </a>
+                            <a href="assets/images/lm-map_LieferMax-Map-2-1024x731.png" target="_blank" class="block">
+                                <img src="assets/images/lm-map_LieferMax-Map-2-1024x731.png" alt="LM-MAP Ansicht 2" class="rounded-lg shadow-lg hover:scale-105 transition cursor-pointer w-full h-64 object-cover">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -498,11 +513,11 @@
     <section id="shop" class="py-24 px-4 bg-gray-50">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
-                <div class="inline-block bg-orange-100 text-orange-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
+                <div class="inline-block bg-red-100 text-red-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
                     E-COMMERCE INTEGRATION
                 </div>
                 <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
-                    Shop-<span class="text-orange-600">Konverter</span>
+                    Shop-<span class="text-red-600">Konverter</span>
                 </h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                     Moderne View-basierte Schnittstellen zwischen Ihrem Webshop und COPA Systeme drink.3000 & drink.PRO
@@ -523,7 +538,7 @@
             <div class="grid lg:grid-cols-2 gap-12 mb-12">
                 <div class="bg-white rounded-2xl p-8 shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6 flex items-center gap-3">
-                        <i class="fas fa-download text-orange-600"></i>
+                        <i class="fas fa-download text-red-600"></i>
                         Von COPA zum Shop
                     </h3>
                     <div class="space-y-3">
@@ -560,7 +575,7 @@
 
                 <div class="bg-white rounded-2xl p-8 shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6 flex items-center gap-3">
-                        <i class="fas fa-upload text-orange-600"></i>
+                        <i class="fas fa-upload text-red-600"></i>
                         Vom Shop zu COPA
                     </h3>
                     <div class="space-y-3">
