feat: optimize LieferMax product text and center thumbnail
Changes:
- Replace product description with optimized customer text:
  * Emphasize driver workflow optimization
  * Highlight navigation speed improvements
  * Detail full/empty goods handling and direct sales
  * Explain paperless workflow and automatic archiving
  * Mention Android security decision
  * Emphasize COPA SYSTEME compatibility
  * End with strong call: 'Diese App werden Ihre Mitarbeiter LIEBEN.'
- Center thumbnail in its own div (flex flex-col items-center)
- Center caption text below thumbnail
- Improve text flow with multiple paragraphs (mb-4 spacing)
- Make final sentence bold (font-semibold) for emphasis
- Better visual hierarchy and readability

--- a/products.html
+++ b/products.html
@@ -127,11 +127,20 @@
                     <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
                         LieferMax <span class="gradient-text">App</span>
                     </h2>
-                    <p class="text-xl text-gray-600 mb-6 leading-relaxed">
-                        Die LieferMax App ist eine native iOS-Anwendung, die den kompletten Auslieferungsprozess digitalisiert. Papierlose Lieferscheine, integrierte Navigation und automatische Synchronisation mit COPA Systemen.
+                    <p class="text-lg text-gray-600 mb-4 leading-relaxed">
+                        LieferMax ist eine Apple App mit der Ihre Lieferfahrer den kompletten Auslieferungsprozess optimiert steuern können. Ihr Tourenablauf wird durch die interne Navigation deutlich beschleunigt.
                     </p>
-                    <p class="text-lg text-gray-600 mb-8">
-                        <strong>NEU:</strong> Jetzt auch für alle iPhone und iPod Modelle verfügbar!
+                    <p class="text-lg text-gray-600 mb-4 leading-relaxed">
+                        Voll- und Leergutfahrten, sauberes Disponieren und natürlich der Verkauf direkt vom LKW, runden das System professionell ab. Vor allem das Rückerfassen der Lieferungen im Büro entfallen komplett.
+                    </p>
+                    <p class="text-lg text-gray-600 mb-4 leading-relaxed">
+                        Lieferscheine und Rechnungen können über den mobilen Thermodrucker ausgegeben oder papierlos direkt per Mail zum Kunden geschickt werden. Die ebenfalls automatisch erstellten PDF Lieferscheine und Rechnungen werden wie von Zauberhand in Ihrem Dokumenten-Archiv abgelegt.
+                    </p>
+                    <p class="text-lg text-gray-600 mb-4 leading-relaxed">
+                        Aus Sicherheitsgründen sehen wir von Android Betriebssystemen ab. LieferMax kann mit drink.3000 und drink.PRO von COPA SYSTEME und bestimmt auch mit Ihrer Warenwirtschaft arbeiten, fragen Sie uns einfach.
+                    </p>
+                    <p class="text-lg text-gray-600 mb-8 leading-relaxed font-semibold">
+                        Diese App werden Ihre Mitarbeiter LIEBEN.
                     </p>
                     
                     <div class="bg-red-50 rounded-2xl p-6 mb-8">
@@ -172,10 +181,10 @@
                         </div>
                     </div>
 
-                    <!-- Screenshot Thumbnail - moved here under text -->
-                    <div class="mb-8">
+                    <!-- Screenshot Thumbnail - centered in its own div -->
+                    <div class="mb-8 flex flex-col items-center">
                         <img src="assets/images/liefermax-screenshots/1.png" alt="LieferMax App Screenshot" class="w-1/2 rounded-2xl shadow-2xl cursor-pointer hover:scale-105 transition-transform" onclick="openCarousel(0)" loading="lazy">
-                        <p class="text-gray-500 text-sm mt-4">Klicken Sie auf das Bild, um alle Screenshots zu sehen</p>
+                        <p class="text-gray-500 text-sm mt-4 text-center">Klicken Sie auf das Bild, um alle Screenshots zu sehen</p>
                     </div>
 
                 </div>
