feat: add screenshots to Bestell-Apps section
Changes:
- Add FZAPPNLetter-1024x763.png as main image (Hauptbild)
- Add Bildschirmfoto-2021-02-25-um-13.27.16.png as secondary image (Nebenbild)
- Both images clickable with modal functionality
- Hover scale effect for better UX
- Lazy loading for performance
- Images placed above the gradient box on right side
- Consistent styling with other product sections

--- a/products.html
+++ b/products.html
@@ -700,6 +700,12 @@
                     </div>
                 </div>
                 <div>
+                    <!-- App Screenshots -->
+                    <div class="space-y-4 mb-8">
+                        <img src="assets/images/FZAPPNLetter-1024x763.png" alt="Bestell-App Hauptansicht" class="w-full rounded-2xl shadow-2xl cursor-pointer hover:scale-105 transition-transform" onclick="openImageModal('assets/images/FZAPPNLetter-1024x763.png')" loading="lazy">
+                        <img src="assets/images/Bildschirmfoto-2021-02-25-um-13.27.16.png" alt="Bestell-App Details" class="w-full rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform" onclick="openImageModal('assets/images/Bildschirmfoto-2021-02-25-um-13.27.16.png')" loading="lazy">
+                    </div>
+
                     <div class="bg-gradient-to-br from-pink-500 to-purple-500 rounded-3xl p-8 text-white">
                         <div class="bg-white bg-opacity-20 backdrop-blur-sm rounded-2xl p-6 mb-6">
                             <h3 class="text-2xl font-bold mb-4">Vorteile</h3>
