feat: complete navigation updates on all pages and fix demo button
Navigation Updates (remaining pages):
- Update integration.html with new navigation structure
- Update contact.html with new navigation structure
- Update agb.html, datenschutz.html, impressum.html via Python script
- All pages now have consistent navigation:
  * Home, LieferMax, LM-CHECK, LM-MAP, ShopWare & WooCommerce, Bestell App
  * App testen button with correct App Store link
- Fix duplicate CSS in integration.html

Demo Button Fix:
- Change 'Kostenlose Demo' button from <button> to <a> tag
- Add link to contact.html
- Maintain styling and hover effects

All visible pages now have updated navigation!

--- a/agb.html
+++ b/agb.html
@@ -41,15 +41,15 @@
                     </div>
                 </div>
                 <div class="hidden md:block">
-                    <div class="ml-10 flex items-center space-x-8">                        <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition">Home</a>
-                        <a href="products.html" class="text-gray-600 hover:text-red-600 font-medium transition">Produkte</a>
-                        <a href="bestell-app.html" class="text-gray-600 hover:text-red-600 font-medium transition">Bestell-App</a>
-                        <a href="weitere-tools.html" class="text-gray-600 hover:text-red-600 font-medium transition">Shop-Integration</a>
-                        <a href="portal.html" class="text-gray-600 hover:text-red-600 font-medium transition">Portal</a>
-                        <a href="integration.html" class="text-gray-600 hover:text-red-600 font-medium transition">COPA</a>
-                        <a href="contact.html" class="text-gray-600 hover:text-red-600 font-medium transition">Kontakt</a>
-                        <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
-                            Demo anfragen
+                    <div class="ml-10 flex items-center space-x-8">
+                        <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition">Home</a>
+                        <a href="products.html#liefermax" class="text-gray-600 hover:text-red-600 font-medium transition">LieferMax</a>
+                        <a href="products.html#check" class="text-gray-600 hover:text-red-600 font-medium transition">LM-CHECK</a>
+                        <a href="products.html#map" class="text-gray-600 hover:text-red-600 font-medium transition">LM-MAP</a>
+                        <a href="products.html#shop" class="text-gray-600 hover:text-red-600 font-medium transition">ShopWare & WooCommerce</a>
+                        <a href="products.html#apps" class="text-gray-600 hover:text-red-600 font-medium transition">Bestell App</a>
+                        <a href="https://apps.apple.com/de/app/liefermax/id1349464950" target="_blank" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
+                            App testen
                         </a>
                     </div>
                 </div>
@@ -63,9 +63,12 @@
             <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
                 <div class="flex flex-col space-y-4 px-4">
                     <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Home</a>
-                    <a href="products.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Produkte</a>
-                    <a href="integration.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">COPA Integration</a>
-                    <a href="contact.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Kontakt</a>
+                    <a href="products.html#liefermax" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LieferMax</a>
+                    <a href="products.html#check" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LM-CHECK</a>
+                    <a href="products.html#map" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LM-MAP</a>
+                    <a href="products.html#shop" class="text-gray-600 hover:text-red-600 font-medium transition py-2">ShopWare & WooCommerce</a>
+                    <a href="products.html#apps" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Bestell App</a>
+                    <a href="https://apps.apple.com/de/app/liefermax/id1349464950" target="_blank" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">App testen</a>
                 </div>
             </div>
         </div>
