--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
                 Vereinbaren Sie jetzt eine kostenlose Demo und erleben Sie, wie LieferMax Ihre Getränkelogistik revolutioniert.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
-                <button class="bg-white text-red-600 px-10 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105">
+                <a href="contact.html" class="bg-white text-red-600 px-10 py-4 rounded-lg font-bold text-lg hover:shadow-2xl transition transform hover:scale-105 inline-block">
                     <i class="fas fa-calendar-check mr-2"></i>Kostenlose Demo
-                </button>
+                </a>
                 <a href="contact.html" class="bg-red-700 bg-opacity-50 backdrop-blur-sm text-white px-10 py-4 rounded-lg font-bold text-lg hover:bg-opacity-70 transition border-2 border-white border-opacity-30">
                     <i class="fas fa-phone mr-2"></i>08367 – 91 39 187
                 </a>
