--- a/integration.html
+++ b/integration.html
@@ -29,14 +29,6 @@
             --border: #E0E0E0;
         }
         .gradient-bg { background: linear-gradient(135deg, #D32F2F 0%, #E57373 100%); }
-        
-        :root {
-            --primary-red: #D32F2F;
-            --primary-gray: #333333;
-            --secondary-gray: #666666;
-            --light-bg: #F5F5F5;
-            --border: #E0E0E0;
-        }
         .gradient-text { background: linear-gradient(135deg, #D32F2F 0%, #E57373 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
         .card-hover { transition: all 0.3s ease; }
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
@@ -54,15 +46,15 @@
                     </div>
                 </div>
                 <div class="hidden md:block">
-                    <div class="ml-10 flex items-center space-x-8">                        <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition">Home</a>
-                        <a href="products.html" class="text-gray-600 hover:text-red-600 font-medium transition">Produkte</a>
-                        <a href="bestell-app.html" class="text-gray-600 hover:text-red-600 font-medium transition">Bestell-App</a>
-                        <a href="weitere-tools.html" class="text-gray-600 hover:text-red-600 font-medium transition">Shop-Integration</a>
-                        <a href="portal.html" class="text-gray-600 hover:text-red-600 font-medium transition">Portal</a>
-                        <a href="integration.html" class="text-gray-600 hover:text-red-600 font-medium transition">COPA</a>
-                        <a href="contact.html" class="text-gray-600 hover:text-red-600 font-medium transition">Kontakt</a>
-                        <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
-                            Demo anfragen
+                    <div class="ml-10 flex items-center space-x-8">
+                        <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition">Home</a>
+                        <a href="products.html#liefermax" class="text-gray-600 hover:text-red-600 font-medium transition">LieferMax</a>
+                        <a href="products.html#check" class="text-gray-600 hover:text-red-600 font-medium transition">LM-CHECK</a>
+                        <a href="products.html#map" class="text-gray-600 hover:text-red-600 font-medium transition">LM-MAP</a>
+                        <a href="products.html#shop" class="text-gray-600 hover:text-red-600 font-medium transition">ShopWare & WooCommerce</a>
+                        <a href="products.html#apps" class="text-gray-600 hover:text-red-600 font-medium transition">Bestell App</a>
+                        <a href="https://apps.apple.com/de/app/liefermax/id1349464950" target="_blank" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold hover:shadow-lg transition">
+                            App testen
                         </a>
                     </div>
                 </div>
@@ -76,14 +68,12 @@
             <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200 py-4">
                 <div class="flex flex-col space-y-4 px-4">
                     <a href="index.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Home</a>
-                    <a href="products.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Produkte</a>
-                    <a href="bestell-app.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Bestell-App</a>
-                    <a href="weitere-tools.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Shop-Integration</a>
-                    <a href="portal.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Portal</a>
-                    <a href="integration.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">COPA</a>
-                    <a href="contact.html" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Kontakt</a>
-                    <a href="contact.html" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">Demo anfragen</a>
-                
+                    <a href="products.html#liefermax" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LieferMax</a>
+                    <a href="products.html#check" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LM-CHECK</a>
+                    <a href="products.html#map" class="text-gray-600 hover:text-red-600 font-medium transition py-2">LM-MAP</a>
+                    <a href="products.html#shop" class="text-gray-600 hover:text-red-600 font-medium transition py-2">ShopWare & WooCommerce</a>
+                    <a href="products.html#apps" class="text-gray-600 hover:text-red-600 font-medium transition py-2">Bestell App</a>
+                    <a href="https://apps.apple.com/de/app/liefermax/id1349464950" target="_blank" class="gradient-bg text-white px-6 py-3 rounded-lg font-semibold text-center hover:shadow-lg transition">App testen</a>
                 </div>
             </div>
         </div>
