feat: add images to LieferMax section on products page
Image Additions:
- Add liefermax-logo.png next to 'LieferMax App' title
- Add TSE-liefermax.png badge in right column below COPA compatibility
- Add two example photos horizontally below main content:
  * Auslieferung_fahrer_01.jpg - Driver using LieferMax app
  * Auslieferung_Beispiel_Foto.jpg - Beverage delivery example

Layout Improvements:
- Logo integrated with flex layout next to title (h-16 w-16)
- TSE badge centered below COPA info (h-24)
- Example photos in 2-column grid with hover effects
- Photos have gradient overlays with descriptive captions
- Responsive design: stacks on mobile, side-by-side on desktop
- Hover zoom effect on photos for better UX

All images copied from client_input to assets/images

--- a/products.html
+++ b/products.html
@@ -107,7 +107,8 @@
                     <div class="inline-block bg-red-100 text-red-700 px-4 py-2 rounded-full mb-4 font-semibold text-sm">
                         HAUPTPRODUKT
                     </div>
-                    <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6">
+                    <h2 class="text-4xl md:text-5xl font-black text-gray-900 mb-6 flex items-center gap-4">
+                        <img src="assets/images/liefermax-logo.png" alt="LieferMax Logo" class="h-16 w-16 object-contain">
                         LieferMax <span class="gradient-text">App</span>
                     </h2>
                     <p class="text-lg text-gray-600 mb-4 leading-relaxed">
@@ -329,8 +330,29 @@
                         </div>
                         <div class="text-center">
                             <div class="text-sm opacity-80 mb-2">Kompatibel mit</div>
-                            <div class="font-bold text-lg">COPA drink.3000 & drink.PRO</div>
+                            <div class="font-bold text-lg mb-6">COPA drink.3000 & drink.PRO</div>
+                            <div class="flex justify-center">
+                                <img src="assets/images/TSE-liefermax.png" alt="TSE Zertifiziert" class="h-24 w-auto">
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Example Photos Section -->
+            <div class="grid md:grid-cols-2 gap-8 mt-16">
+                <div class="relative group overflow-hidden rounded-2xl shadow-xl">
+                    <img src="assets/images/Auslieferung_fahrer_01.jpg" alt="Fahrer mit LieferMax App bei der Auslieferung" class="w-full h-80 object-cover transition-transform duration-300 group-hover:scale-105">
+                    <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6">
+                        <p class="text-white font-semibold text-lg">LieferMax im Einsatz</p>
+                        <p class="text-gray-200 text-sm">Professionelle Auslieferung mit digitaler Unterstützung</p>
+                    </div>
+                </div>
+                <div class="relative group overflow-hidden rounded-2xl shadow-xl">
+                    <img src="assets/images/Auslieferung_Beispiel_Foto.jpg" alt="Getränkeauslieferung mit LieferMax" class="w-full h-80 object-cover transition-transform duration-300 group-hover:scale-105">
+                    <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6">
+                        <p class="text-white font-semibold text-lg">Effiziente Getränkelogistik</p>
+                        <p class="text-gray-200 text-sm">Schnelle und zuverlässige Lieferung beim Kunden</p>
                     </div>
                 </div>
             </div>
