chore: Add request id logging and set mail envelope sender
- Add request_id to correlate UI success with server log entries
- Set envelope sender (-f) for PHP mail() to improve deliverability on Strato
- Log request_received and include last PHP error in mail_sent/mail_failed logs
- Show request_id in contact form success message

--- a/contact.html
+++ b/contact.html
@@ -449,7 +449,9 @@
                     }
 
                     if (payload && payload.success) {
-                        setStatus('success', payload.message || 'Vielen Dank!');
+                        const msg = payload.message || 'Vielen Dank!';
+                        const requestId = payload.request_id ? (' (ID: ' + payload.request_id + ')') : '';
+                        setStatus('success', msg + requestId);
                         form.reset();
                         if (nameField) {
                             nameField.value = '';
